--- a/lamp/roles/common/templates/ntp.conf.j2
+++ b/lamp/roles/common/templates/ntp.conf.j2
@@ -4,7 +4,7 @@ driftfile /var/lib/ntp/drift
 restrict 127.0.0.1 
 restrict -6 ::1
 
-server {{ ntpserver }}
+server 1.south-america.pool.ntp.org
 
 includefile /etc/ntp/crypto/pw
 
